test/data/resolver/valid/delete_bare_property.cypher
MATCH (n:Person) DELETE n.name
