test/data/resolver/invalid/delete_bare_property_unknown.cypher
MATCH (n:Person) DELETE n.notAProp
